closes #58 - login form alignment issues

--- a/app/styles/dev/partials/login.css
+++ b/app/styles/dev/partials/login.css
@@ -20,7 +20,7 @@
 	}
 }
 
-.fieldGroup {
+.fieldGroup--login {
 	position: relative;
 	margin-bottom: 1rem;
 	input[type="text"], input[type="password"] {
