--- a/app/styles/dev/utilities/typography.css
+++ b/app/styles/dev/utilities/typography.css
@@ -142,6 +142,14 @@ small {
   font-weight: 400;
 }
 
+.smallcaps {
+	font-size: 1.2rem;
+  line-height: 1.2;
+  font-family: $regularFont;
+  font-weight: 400;
+	text-transform: uppercase;
+}
+
 a {
   color: $blue;
   border-bottom: 1px solid $blue;
@@ -167,12 +175,12 @@ a:enter {
 .grey { color: $grey; }
 .redLight { color: $redLight;}
 
-p.error { 
+p.error {
   font-weight: 700;
   font-family: $headerFont;
 }
 
-p.success { 
+p.success {
   font-weight: 700;
   font-family: $headerFont;
 }
